[project]
name = "pi-sniffrf"
version = "0.1.0"
description = "RF Signal Capture and Repeat Tool for Raspberry Pi with nRF24 modules"
authors = [
    {name = "Kyle Humphrey", email = "kyle@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.0",
]

[project.optional-dependencies]
rpi = [
    "pyRF24>=0.5.1",
    "RPi.GPIO>=0.7.1",
    "spidev>=3.6",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.2",
    "isort>=5.13.2",
    "pytest>=8.3.5",
]
